# jack_audio_examples

./: CMakeLists.txt  README.md
documentation/: README.md
src/: jack_midi_in.c  jack_sine_out.c
